# EnergyOptimization2

./: .gitignore  01_fetch_county_boundary.py  02_fetch_town_boundaries.py  03_grid_inline_preview.html  03_grid_simulation.html  03_restoration_inline_preview.html  04_geojson_to_shapefile.py  05_generate_artifacts.ps1  05_generate_artifacts.py  06_precompute_scenarios.py  07_server.py  08_fetch_substations.py  09_fetch_critical_facilities.py  10_fetch_tree_canopy.py  11_fetch_census_tracts.py  12_fetch_hrrr_storm_wind.py  13_fetch_flood_corridors.py  14_fetch_land_boundary.py  15_fetch_storm_events.py  16_calibrate_against_real_storms.py  17_fetch_live_outages.py  18_fetch_eaglei_ct.py  19_validate_against_eaglei.py  20_ensemble_vs_actual.py  21_crew_backout.py  22_infer_network_from_outages.py  23_concentrated_placement.py  24_validate_placement_vs_eaglei.py  25_placement_fidelity_summary.py  26_storm_applicability_census.py  DATA_SOURCES.md  DESIGN_DECISIONS.md  DEVELOPMENT_JOURNAL.md  DEVELOPMENT_JOURNAL_V2.md  Dockerfile  Hartford_Grid_Dev_Journal.docx  Hartford_Grid_Research_Context.docx  JOURNAL.html  LICENSE  OUTAGE_LOCATION_IMPLEMENTATION_PLAN.md  (+29 more)
.claude/: launch.json
data/: connecticut_boundary.json  connecticut_census_tracts.js  connecticut_census_tracts.json  connecticut_critical_facilities.js  connecticut_critical_facilities.json  connecticut_flood_corridors.js  connecticut_flood_corridors.json  connecticut_land_boundary.json  connecticut_live_outages.js  connecticut_storm_events.js  eaglei_MCC.csv  (+34 more)
wasm_scheduler/: Cargo.toml
wasm_scheduler/src/: lib.rs
(+33 files in other folders)
